@@ -1,0 +1,7 @@
+# This Build.PL for Perl-Critic-Freenode was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.014.
+use strict;
+use warnings;
+
+use 5.010001;
+use Module::Build::Tiny 0.034;
+Build_PL();
