@@ -1,51 +1,0 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.039.
-use strict;
-use warnings;
-
-use 5.010001;
-
-use ExtUtils::MakeMaker;
-
-my %WriteMakefileArgs = (
-  "ABSTRACT" => "Perl::Critic policies inspired by #perl on freenode IRC",
-  "AUTHOR" => "Dan Book <dbook\@cpan.org>",
-  "CONFIGURE_REQUIRES" => {
-    "ExtUtils::MakeMaker" => 0
-  },
-  "DISTNAME" => "Perl-Critic-Freenode",
-  "LICENSE" => "artistic_2",
-  "MIN_PERL_VERSION" => "5.010001",
-  "NAME" => "Perl::Critic::Freenode",
-  "PREREQ_PM" => {
-    "List::Util" => "1.33",
-    "Perl::Critic" => "1.126",
-    "Perl::Critic::Policy::Subroutines::ProhibitAmpersandSigils" => "1.125",
-    "parent" => 0,
-    "version" => 0
-  },
-  "VERSION" => "0.009",
-  "test" => {
-    "TESTS" => "t/*.t"
-  }
-);
-
-
-my %FallbackPrereqs = (
-  "List::Util" => "1.33",
-  "Perl::Critic" => "1.126",
-  "Perl::Critic::Policy::Subroutines::ProhibitAmpersandSigils" => "1.125",
-  "parent" => 0,
-  "version" => 0
-);
-
-
-unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
-  delete $WriteMakefileArgs{TEST_REQUIRES};
-  delete $WriteMakefileArgs{BUILD_REQUIRES};
-  $WriteMakefileArgs{PREREQ_PM} = \%FallbackPrereqs;
-}
-
-delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
-  unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
-
-WriteMakefile(%WriteMakefileArgs);
