@@ -5,4 +5,5 @@ copyright_holder = Dan Book
 copyright_year   = 2015
 
 [@Author::DBOOK]
+installer = ModuleBuildTiny
 pod_tests = syntax
